[tool.poetry]
name = "fsatapi-example"
version = "0.1.0"
description = ""
authors = ["vyacheslav <skavik46111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["httpx"], version = "^0.110.0"}
motor = "^3.3.2"
uvicorn = {extras = ["all"], version = "^0.28.0"}
ipython = "^8.22.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
faker = "^24.3.0"
punq = "^0.7.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
aiokafka = "^0.10.0"
orjson = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
